--- a/index.html
+++ b/index.html
@@ -1880,14 +1880,12 @@
 <ul>
    <li style="list-style-type: none;">
 <ul>
-	<li><a href="https://www.give-star.com/" rel="dofollow">7upbet</a></li>
-	<li><a href="https://neotericdesign.com/" rel="dofollow">onicplay</a></li>
-	<li><a href="https://www.chidiwilliams.com/" rel="dofollow">7upbet</a></li>
-	<li><a href="https://onan.districtdining.smccd.edu/" rel="dofollow">7upbet</a></li>
-	<li><a href="https://www.mochalabs.com/" rel="dofollow">7upcash</a></li>
-	<li><a href="https://www.johnkerry.com/" rel="dofollow">slot kakek zeus</a></li>
-  	<li><a href="https://www.weltklasse.ch/" rel="dofollow">slot kakek zeus</a></li>
-  	<li><a href="https://docly.uk/" rel="dofollow">slot77</a></li>
+  <li><a href="https://neotericdesign.com/" rel="dofollow">onicplay</a></li>
+  <li><a href="https://newscycle.com/" rel="dofollow">7upbet</a></li>
+  <li><a href="https://docly.uk/" rel="dofollow">slot77</a></li>
+  <li><a href="https://295devops.com/" rel="dofollow">7upbet</a></li>
+  <li><a href="https://dani.town/" rel="dofollow">idnslot</a></li>
+  <li><a href="https://www.mochalabs.com/" rel="dofollow">7upcash</a></li>
 </ul>
 </li>
 </ul></div>
